# scapy-iscsi

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml
examples/: aca-condition.py  lun-reset.py  lun_reset.py  release.py  reserve.py  reserve_and_release.py  scsi2-reservations.py  scsi3-reservations.py  text-request.py  write.py
scapy_iscsi/: iscsi.py
scapy_iscsi/layers/: iscsi.py
tests/: test_building.py  test_smoke.py
tests/pdu/: login-request  write16
