[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-iscsi"
version = "0.1.0"
authors = [
    { name = "Daria Bukharina", email = "d.bukharina@yadro.com" },
    { name = "Konstantin Shelekhin", email = "k.shelekhin@yadro.com" },
]
description = "iSCSI layer for Scapy"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "scapy ~=2.5.0",
]

[project.optional-dependencies]
development = [
    "pycodestyle ~=2.10.0",
    "pytest ~=7.0.1",
]
